<?xml version="1.0" encoding="utf-8"?>
<resources>

    <!-- common strings -->
    <string name="app_name">DAVdroid</string>
    
    <string name="davdroid_website">DAVdroid Web site</string>
    <string name="next">Next</string>
    <string name="help">Help</string>
    
    <string name="exception_http">HTTP error: %s</string>
    <string name="exception_incapable_resource">Missing capabilities: %s</string>
    <string name="exception_io">I/O error: %s</string>
    <string name="exception_uri_syntax">Invalid URI: %s</string>
    
    <!-- MainActivity -->
    <string name="main_manage_accounts">Manage sync accounts</string>
    
    <string name="html_main_workaround"><![CDATA[
		<p>Thank you for buying DAVdroid via Google Play and thus supporting the project. Unfortunately, there are two issues with Google Play:</p>
		
		<h2>1. Accounts may be gone after a reboot</h2>
		<p>You may encounter the problem that all your <strong>DAVdroid accounts (including contacts and events) are gone
        after rebooting your device</strong>. The reason is a <a href="https://code.google.com/p/android/issues/detail?id=34880">bug in Android</a>
        that causes accounts of paid apps to be removed on start-up because the (encrypted) APK files are
        loaded <i>after</i> checking for orphaned accounts.</p>
        <p>Affected users:<br/>
        * all Android 4.1 users who have got DAVdroid from Play Store;<br/>
        * Android 4.2 users who have got DAVdroid from Play Store only with certain devices (for instance, most Samsung devices)</p>
        
        <h2>2. Accounts may be gone after upgrading DAVdroid</h2>
        <p>You may encounter the problem that all your <strong>DAVdroid accounts (including contacts and events) when Play Store
        updates DAVdroid</strong>. The reason is <a href="https://code.google.com/p/android/issues/detail?id=66905">another bug in Android</a>
        that causes accounts of paid apps to be removed when upgrading for a similar reason.</p>
        <p>Affected users: some Android 4.4.2 users who have got DAVdroid from Play Store (known for Nexus devices and Moto G)</p>
        
        <p><strong>If you\'re affected by one of these bugs, please <a href="market://details?id=at.bitfire.davdroid.jbworkaround">install the
        DAVdroid JB Workaround</a>.</strong></p>
    ]]></string>
    <string name="html_main_info"><![CDATA[
       <h1>Welcome to DAVdroid/%s!</h1>
       
       <p>DAVdroid is an Android 4+ sync adapter for CalDAV/CardDAV. To use it, just add a DAVdroid account
       for your CalDAV/CardDAV server and your contacts/events will be synchronized in both directions.</p>
       
       <p>For more information, please see the <a href="http://davdroid.bitfire.at?pk_campaign=davdroid-app&amp;pk_kwd=main-activity">DAVdroid homepage</a>.
       There\'s a <a href="http://davdroid.bitfire.at/configuration?pk_campaign=davdroid-app&amp;pk_kwd=main-activity">Setup guide</a>, too. DAVdroid respects
       your privacy, see our <a href="http://davdroid.bitfire.at/privacy?pk_campaign=davdroid-app&amp;pk_kwd=main-activity">Privacy Policy</a>.</p>
       
       <p>If you use CyanogenMod, "Privacy Guard" must be disabled for DAVdroid. Otherwise, DAVdroid is not allowed to access
       and synchronize your contacts and events.</p>
       
       <p><b>In case of problems, please read the <a href="http://davdroid.bitfire.at/configuration?pk_campaign=davdroid-app&amp;pk_kwd=main-activity">FAQ</a> first.
       If you encounter a bug that is clearly related to DAVdroid, enter it on
       <a href="https://github.com/rfc2822/davdroid">Github issues</a> instead of contacting us directly or giving a poor
       rating for the app.</b></p>
              
	   <h1>Open-source</h1>
	   <p>DAVdroid is designed to be an open-source project from the very first beginning. It is always possible to compile the
	   app yourself and use it for free without any obligations. The source code is
	   <a href="https://github.com/rfc2822/davdroid">available on Github</a>, and you can
	   <a href="https://f-droid.org/app/at.bitfire.davdroid">download the app on F-droid</a>.</p>
	   
	   <p>However, it was much work to create this app, so we have decided to put it into the commercial stores for a small fee.
	   If you want to support this project, please consider <a href="http://davdroid.bitfire.at/donate?pk_campaign=davdroid-app&amp;pk_kwd=main-activity">donating to DAVdroid</a>
	   or purchasing it.</p>
	   
	   <h1>License</h1>
	   <p>Copyright (c) 2013 – 2014 Ricki Hirner, Bernhard Stockmann (<a href="http://www.bitfire.at">bitfire web engineering</a>). All rights reserved.
	   This program and the accompanying materials are made available under the terms of the GNU Public License v3.0 which
	   accompanies this distribution, and is available at <a
	   href="http://www.gnu.org/licenses/gpl.html">http://www.gnu.org/licenses/gpl.html</a>. As far as Google Play, Samsung
	   Store, AndroidPit App Center or Amazon Appstore require other terms, the respective terms apply for versions
	   that are downloaded via these services.</p>
	   
	   <p>Translation for German is provided by the authors. Translations to other languages have been contributed by
	   various people which are mentioned in their respective language version.</p>
	   
	   <h2>Used third-party libraries</h2>
	   <p>
	    * <a href="http://hc.apache.org">Apache HttpClient</a> (<a href="https://code.google.com/p/httpclientandroidlib/">httpclientandroidlib</a> flavour) – <a href="http://www.apache.org/licenses/">Apache License, Version 2.0</a><br/>
	   	* <a href="http://ical4j.sourceforge.net/">iCal4j<a> – <a href="http://sourceforge.net/p/ical4j/ical4j/ci/default/tree/LICENSE">New BSD License</a>)<br/>
	   	* <a href="https://code.google.com/p/ez-vcard/">ez-vcard</a> – <a href="http://opensource.org/licenses/BSD-3-Clause">New BSD License</a><br/>
	   	* <a href="http://simple.sourceforge.net/">Simple XML Serialization</a> – <a href="http://www.apache.org/licenses/LICENSE-2.0">Apache License, Version 2.0</a><br/>
	   	* <a href="http://projectlombok.org/">Project Lombok</a> – <a href="http://opensource.org/licenses/mit-license.php">MIT License</a><br/>
		* <a href="http://www.xbill.org/dnsjava/">dnsjava</a> – <a href="http://www.xbill.org/dnsjava/dnsjava-current/LICENSE">BSD License</a></p>
    ]]></string>

    <!-- AddAccountActivity -->
    <string name="login_type_email">Login with email address</string>
    <string name="login_type_email_description">Service details will be auto-detected by domain name. Example: myaccount@icloud.com</string>
    <string name="login_type_url">Login with URL and user name</string>
    <string name="login_type_url_description">Service details will be auto-detected by initial URL and user name. Mostly used for self-hosted services.</string>
    
    <string name="login_email_description">Please enter your email address. Its domain name will be used to auto-detect service settings.</string>
    <string name="login_email_address">Email:</string>
    
    <string-array name="login_url_scheme">
        <item>http://</item>
        <item>https://</item>
    </string-array>
    <string name="login_http_warning">"If you don't use encryption (HTTPS), other people may easily intercept your login details, contacts and events."</string>
    <string name="login_user_name">User name:</string>
    <string name="login_base_url">Base URL (collections will be auto-detected):</string>
    <string name="login_auth_preemptive">Preemptive authentication (recommended, but incompatible with Digest auth)</string>

    <string name="login_password">Password:</string>
    
    <string name="setup_select_collections">DAVdroid: Select collections</string>
    <string name="setup_neither_caldav_nor_carddav">No CalDAV-/CardDAV service is available at this location.</string>
    <string name="setup_add_account">Add account</string>
    <string name="setup_querying_server">Querying server. Please wait…</string>
    <string name="setup_what_to_sync">Which collections shall be synchronized?</string>
    <string name="setup_address_books">Address books</string>
    <string name="setup_address_book">Address book</string>
    <string name="setup_calendars">Calendars</string>
    <string name="setup_calendar">Calendar</string>
    <string name="setup_select_address_book">Select up to one address book (tap again to unselect):</string>
    <string name="setup_select_calendars">Select your calendars:</string>
    
    <string name="setup_account_details">Account details</string>
    <string name="setup_account_name">Account name:</string>
    <string name="setup_account_name_hint">My CalDAV/CardDAV Account</string>
    <string name="setup_email_address">Email address:</string>
    <string name="setup_organizer_hint">"ORGANIZER of your events; required if you use attendee info"</string>
    <string name="setup_account_name_info">"Use your email address as account name because Android will use the account name as ORGANIZER field for events you create. You can't have two accounts with the same name.</string>
    <string name="setup_read_only">read-only</string>

    <!-- account settings -->
    <string name="settings_general">General settings</string>
    <string name="settings_debug">Debug settings</string>
    <string name="settings_disable_http_compression">Disable HTTP compression</string>
    <string name="settings_http_compression_disabled">HTTP compression is disabled (debug mode)</string>
    <string name="settings_http_compression_enabled">HTTP compression is used whenever possible</string>
    <string name="settings_network_logging">Log network traffic</string>
    <string name="settings_network_logging_enabled">All network traffic is being logged verbosely (debug mode)</string>
    <string name="settings_network_logging_disabled">Network traffic is not being logged</string>
    <string name="settings_report_an_issue">Report an issue</string>
    
</resources>
