<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright (c) 2013 – 2015 Ricki Hirner (bitfire web engineering).
  ~ All rights reserved. This program and the accompanying materials
  ~ are made available under the terms of the GNU Public License v3.0
  ~ which accompanies this distribution, and is available at
  ~ http://www.gnu.org/licenses/gpl.html
  -->

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp"
    android:useDefaultMargins="true" >

    <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <RadioButton
            android:id="@+id/login_type_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="@string/login_type_email" />
        <TextView
            android:labelFor="@+id/login_type_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:text="@string/login_type_email_description" />

        <RadioButton
            android:id="@+id/login_type_url"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/login_type_url" />
        <TextView
            android:labelFor="@+id/login_type_url"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/login_type_url_description" />
    </RadioGroup>

</ScrollView>
