<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright (c) 2013 – 2015 Ricki Hirner (bitfire web engineering).
  ~ All rights reserved. This program and the accompanying materials
  ~ are made available under the terms of the GNU Public License v3.0
  ~ which accompanies this distribution, and is available at
  ~ http://www.gnu.org/licenses/gpl.html
  -->

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:tools="http://schemas.android.com/tools"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

    <GridLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:columnCount="2"
        android:padding="10dp"
        android:useDefaultMargins="true" >

        <TextView
            android:layout_columnSpan="2"
            android:layout_gravity="start"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/login_base_url" />

        <Spinner
            android:id="@+id/login_scheme"
            android:layout_width="wrap_content"
            android:layout_gravity="start"
            android:entries="@array/login_url_scheme" />

        <EditText
            android:id="@+id/login_host_path"
            android:layout_gravity="fill_horizontal"
            android:imeOptions="flagForceAscii|actionNext"
            android:inputType="textUri"
            android:layout_width="0dp"
            android:scrollHorizontally="true"
            android:scrollbars="horizontal"
            android:hint="my.webhost.com" tools:ignore="HardcodedText">
            <requestFocus />
        </EditText>

        <TextView
            android:id="@+id/http_warning"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:layout_width="fill_parent"
            android:layout_columnSpan="2"
            android:layout_gravity="start"
            android:drawableLeft="@drawable/alerts_and_states_warning"
            android:drawableStart="@drawable/alerts_and_states_warning"
            android:drawablePadding="10dp"
            android:padding="10dp"
            android:text="@string/login_http_warning" />

        <TextView
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/login_user_name" />

        <EditText
            android:id="@+id/userName"
            android:layout_gravity="fill_horizontal"
            android:inputType="textNoSuggestions|textEmailAddress"
            android:layout_width="0dp"
            android:scrollHorizontally="true"
            android:scrollbars="horizontal"
            android:text="" />

        <TextView
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/login_password" />

        <EditText
            android:id="@+id/password"
            android:layout_gravity="fill_horizontal"
            android:inputType="textPassword"
            android:layout_width="0dp"
            android:scrollHorizontally="true"
            android:scrollbars="horizontal"
            android:text="" />
        
        <CheckBox
            android:id="@+id/auth_preemptive"
            android:layout_columnSpan="2"
            android:checked="true"
            android:layout_gravity="start"
            android:text="@string/login_auth_preemptive" />
        
        <Space android:layout_gravity="start|top" />
        
    </GridLayout>

</ScrollView>